--- a/animalwinners.css
+++ b/animalwinners.css
@@ -34,3 +34,11 @@
 #list tbody tr:nth-child(even) td {
   border-right: rgb(171, 219, 252) 1px dotted;
 }
+
+td[data-field="winner"]::after {
+  content: "🏆";
+}
+
+td[data-field="winner"][data-winner="false"]::after {
+  filter: grayscale(1);
+}
